# CSCI2270_Indexer

./: Cargo.toml  README.md  ip.md  record.txt
LuceneTest/: README.md
LuceneTest/src/: luceneTest.java
dataset/: simple.json  thunder_bird.json  thunder_bird2.json
env/: lock.mdb
log2json/: read_log.py
log2json/json_directory/: file_0.json  file_1.json
ppt/: 2270 Final Project Slides.pptx
resource/: config_test.json
src/: basic_test.rs  btree_map_test.rs  grep_test.rs  main.rs
