[package]
name = "lmdb_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lmdb = "0.8.0"
tempfile = "3.3.0"
fs = "0.0.5"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde = "1.0.136"
walkdir = "2.3.2"
any = "0.0.0"
bincode = "1.3.3"
libc = "0.2.124"